saunamaster-toolbox-prod-1/Deployment-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saunamaster-toolbox-backend-prod-1
  namespace: saunamaster-toolbox-prod-1
  annotations:
    argocd.argoproj.io/sync-wave: "20"
  labels:
    app: saunamaster-toolbox-backend
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: saunamaster-toolbox-backend
  template:
    metadata:
      labels:
        app: saunamaster-toolbox-backend
    spec:
      imagePullSecrets:
        - name: nexus-secret
      containers:
      - name: backend
        image: nexus3.prod-1.dev-software.pl:5001/saunamaster_toolbox_backend:b4c21ec6
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
