saunamaster-toolbox-prod-1/Deployment-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saunamaster-toolbox-frontend-prod-1
  namespace: saunamaster-toolbox-prod-1
  annotations:
    argocd.argoproj.io/sync-wave: "20"
  labels:
    app: saunamaster-toolbox-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: saunamaster-toolbox-frontend
  template:
    metadata:
      labels:
        app: saunamaster-toolbox-frontend
    spec:
      imagePullSecrets:
        - name: nexus-secret
      containers:
      - name: frontend
        image: nexus3.prod-1.dev-software.pl:5001/saunamaster_toolbox_frontend:b4c21ec6
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
